--- a/public/What-is-the-best-casino-to-starexch-in-/index.html
+++ b/public/What-is-the-best-casino-to-starexch-in-/index.html
@@ -142,7 +142,7 @@
   <div class="widget-wrap">
     <h3 class="widget-title">Tags</h3>
     <div class="widget">
-      <ul class="tag-list" itemprop="keywords"><li class="tag-list-item"><a class="tag-list-link" href="/tags/Regulation/" rel="tag">Regulation</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Testing/" rel="tag">Testing</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Vaccine-Development/" rel="tag">Vaccine Development</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/mandates-vaccine/" rel="tag">mandates vaccine</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/mandating-vaccine/" rel="tag">mandating vaccine</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/vaccine-card/" rel="tag">vaccine card</a></li></ul>
+      <ul class="tag-list" itemprop="keywords"><li class="tag-list-item"><a class="tag-list-link" href="/tags/Betstarexch-Casino/" rel="tag">Betstarexch Casino</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Casino-Game/" rel="tag">Casino Game</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Online-Casino/" rel="tag">Online Casino</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Online-Games/" rel="tag">Online Games</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Regulation/" rel="tag">Regulation</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Testing/" rel="tag">Testing</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/Vaccine-Development/" rel="tag">Vaccine Development</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/mandates-vaccine/" rel="tag">mandates vaccine</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/mandating-vaccine/" rel="tag">mandating vaccine</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/toto-site/" rel="tag">toto site</a></li><li class="tag-list-item"><a class="tag-list-link" href="/tags/vaccine-card/" rel="tag">vaccine card</a></li></ul>
     </div>
   </div>
 
@@ -153,6 +153,10 @@
     <h3 class="widget-title">Recent Posts</h3>
     <div class="widget">
       <ul>
+        
+          <li>
+            <a href="/Treasure-of-the-Pyramids-where-is-it-located/">Treasure of the Pyramids where is it located</a>
+          </li>
         
           <li>
             <a href="/What-is-the-Asia-Gaming-company/">What is the Asia Gaming company</a>
